--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,7 @@ googleAnalytics="UA-90617617-1"
 
 [Author]
     name = "@carlogilmar"
-    bio = "Desarrollador de software. Aspirante a ingeniero en informática y sociólogo.
-Me gusta gusta hacer registros visuales."
+    bio = "Desarrollador de software. Aspirante a ingeniero en informática y sociólogo. Me gusta gusta hacer registros visuales."
     avatar = "me.jpg"
 
 
