--- a/config.toml
+++ b/config.toml
@@ -28,16 +28,13 @@ paginate = 5
     pre = "<i class='fa fa-2x fa-twitter'></i>"
 
 [params]
-    viewMorePostLink = "/blog/"
-    author = "DevCows"
-    defaultKeywords = ["devows", "hugo", "go"]
-    defaultDescription = "Site template made by devcows using hugo"
+    viewMorePostLink = "/post/"
+    author = "Carlo Gilmar"
+    defaultKeywords = ["carlogilmar"]
+    defaultDescription = "Espacio para compartir las experiencias y aprendizajes en el desarrollo de software."
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
     style = "red"
-
-
-    email = "your@email.com"
     copyright = "Copyright (c) 2015 - 2016, YourCompany; all rights reserved."
 
     # Format dates with Go's time formatting
