--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://carlogilmar.xyz/blog/"
+baseurl = "https://carlogilmar.xyz/blog/"
 languageCode = "en-us"
 title = "@carlogilmar"
 theme = "hugo-theme-bootstrap4-blog"
